Add some more docs, a few methods, and more tests

--- a/lib/UV/Handle.pod
+++ b/lib/UV/Handle.pod
@@ -123,6 +123,13 @@ method returns non-zero if the handle is closing or closed, zero otherwise.
 B<* Note:> This function should only be used between the initialization of the
 handle and the arrival of the C<close> callback.
 
+=head2 loop
+
+    my $loop = $handle->loop();
+
+The L<loop|http://docs.libuv.org/en/v1.x/handle.html#c.uv_handle_t.loop> method
+returns the L<UV::Loop> object this handle was initialized with.
+
 =head1 AUTHOR
 
 Daisuke Murase <F<typester@cpan.org>>
