Update loop config options to be in UV::Loop and document

--- a/lib/UV/Loop.pod
+++ b/lib/UV/Loop.pod
@@ -47,6 +47,11 @@ Event loops that work properly on all platforms. YAY!
 
 =head3 UV_RUN_ONCE
 
+=head2 CONFIGURE CONSTANTS
+
+=head3 SIGPROF
+
+=head3 UV_LOOP_BLOCK_SIGNAL
 
 =head1 METHODS
 
