--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for Perl extension {{$dist->name}}
 {{$NEXT}}
     - Update some prereqs
     - Remove use of SO_REUSEPORT in the tests. We store the port already.
+    - Made 05-poll-closesocket.t a windows-only test
 
 1.000000_01 2017-08-12
     - ****** MAJOR, BREAKING CHANGES AHEAD ******
