--- a/Changes
+++ b/Changes
@@ -2,12 +2,12 @@ Revision history for Perl extension {{$dist->name}}
 
 {{$NEXT}}
 
-1.000001  2017-08-17
+1.000001  2017-08-17 (TRIAL)
     - Update some prereqs
     - Remove use of SO_REUSEPORT in the tests. We store the port already.
     - Made 05-poll-closesocket.t a windows-only test
 
-1.000000_01 2017-08-12
+1.000000_01 2017-08-12 (TRIAL)
     - ****** MAJOR, BREAKING CHANGES AHEAD ******
     - Migrated to Dist::Zilla
     - Moved the version of libuv from 0.x to 1.x
