Add quite a few tests that just ensure we can actually import the constants and function names.
Add UV::check() which wraps UV::Check->new();
Add UV::idle() which wraps UV::Idle->new();
Add UV::poll() which wraps UV::Poll->new();
Add UV::prepare() which wraps UV::Prepare->new();

Add some tests to ensure our convenience functions work.

Removed several useless   use Scalar::Util 'blessed' as it was
no longer being used.

Added some tests to exercise the UV:: functions.

--- a/Changes
+++ b/Changes
@@ -11,6 +11,13 @@ Revision history for Perl extension {{$dist->name}}
     - Rename Loop->_destroy() to Loop->_destruct() to be consistent
     - Make Loop->_destroy() use p5uv_destroy_loop() to free properly
     - A few changes at the suggestion of Devel::PPPort
+    - Added a few more tests to ensure we can export things correctly
+    - Added a UV::check() function. A convenience wrapper to UV::Check->new
+    - Added a UV::idle() function. A convenience wrapper to UV::Idle->new
+    - Added a UV::poll() function. A convenience wrapper to UV::Poll->new
+    - Added a UV::prepare() function. A convenience wrapper to UV::Prepare->new
+    - Reworked the tests to exercise the above convenience wrappers
+    - Removed a few superfluous 'use' statements
 
 1.000004  2018-01-25 (TRIAL)
     - Require at least ExtUtils::MakeMaker v7.12 for XSMULTI
