--- a/Changes
+++ b/Changes
@@ -1,7 +1,9 @@
 Revision history for Perl extension {{$dist->name}}
 
-{{$NEXT}}
-    - Fix bug in call to Newx().
+{{$NEXT}} (TRIAL)
+    - Fix bug in call to Newx(). (Jim Keenan: issues/24)
+    - Update UV::Loop documentation to better cover the close method.
+    - No longer need Devel::GlobalDestruction.
 
 1.000007  2018-04-20 (TRIAL)
     - Fixed typo in test suite
