Expand testing to more versions of Perl

--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@ Revision history for Perl extension {{$dist->name}}
     - Update the build to use @Starter v3
     - Automate version numbers using DZil rather than incrementing by hand
     - Generate GitHub Flavored Markdown for the README now
+    - Expand testing to more versions of Perl
 
 1.000008  2018-04-21
     - Fix bug in call to Newx(). (Jim Keenan: issues/24)
