--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension UV
 
+1.903 TRIAL 2021-01-19
+    - Switch build system to Module::Build::Using::PkgConfig to see if the
+      late-alien handling there works better for users to install
+
 1.902     2021-01-19
     - Adjust Makefile.PL for better pkg-config or Alien handling
 
