--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension UV
 
+1.904 TRIAL 2021-03-19
+    - Use cmp_ok() on unreliably-failing timer test so when it fails we at
+      least get a log of the numbers
+    - No need for _cleanup_loop() in unit tests
+    - Remove UV::Loop->walk and related code because it isn't implemented
+      and can't easily be made to work
+
 1.903 TRIAL 2021-01-19
     - Switch build system to Module::Build::Using::PkgConfig to see if the
       late-alien handling there works better for users to install
