--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension UV
 
+1.906 2021-03-25
+    - Don't worry about `AI_V4MAPPED` on systems which don't provide it
+    - Removed now-dead `cpanfile`
+
 1.905 TRIAL 2021-03-23
     - Various blind stabbings-in-the-dark that might be MSWin32 bugfixes
        + Export SIG* constants because libuv emulates a few
