--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension UV
 
+1.908002 2021-05-21
+    - Reïnstate _MAKE_SOCK() because 1.908_001 made it worse on MSWin32
+
 1.908001 2021-05-19
     - Account for different errno value on MSWin32 in unit test
     - Experiment with removing _MAKE_SOCK() to see if it makes a difference to
