--- a/Changes
+++ b/Changes
@@ -1,12 +1,9 @@
 Revision history for Perl extension UV
 
-1.908002 2021-05-21
-    - Reïnstate _MAKE_SOCK() because 1.908_001 made it worse on MSWin32
-
-1.908001 2021-05-19
+1.909 2021-05-26
+    - Avoid use-after-free bug when ->close'ing newly listened client
+      connections
     - Account for different errno value on MSWin32 in unit test
-    - Experiment with removing _MAKE_SOCK() to see if it makes a difference to
-      test results
 
 1.908 2021-05-18
     - Don't attempt to unlink $path at END time if the entire test was skipped
