--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension UV
 
+1.911 2021-07-16
+    - Fix an `#if` that should have been an `#ifdef`
+    - Fix skip message in t/12-udp-open.t
+
 1.910 2021-07-16
     - Don't attempt to support UV::TCP->open or UV::UDP->open on Windows,
       because we'd need WSA_FLAG_OVERLAPPED but Perl doesn't set it on sockets
