--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension UV
 
+2.000 2021-07-28
+    - Also add repository bugtracker URL to META files
+    - Document the `$callback` argument to `$loop->getnameinfo()`
+    - Add a TODO section to the documentation, outlining remaining libuv
+      functionallity that could still be handled, but isn't currently
+
 1.912 2021-07-25
     - Documentation adjustment preparing for 2.000 release
     - Misc small internal fixes to Build.PL and git metadata
